Closed Bug 303926 Opened 20 years ago Closed 20 years ago

duplicate bound nodesets do not throw xforms-binding-exception

Categories

(Core Graveyard :: XForms, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stpride, Assigned: doronr)

References

Details

(Keywords: fixed1.8.0.2, fixed1.8.1)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b4) Gecko/20050808 Firefox/1.0+ Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b4) Gecko/20050808 Firefox/1.0+ See 4.2.1(4c) - For each <xf:bind>, if the node already contains a model item property of the same name, XForms processing for this containing document halts with an xforms-binding-exception. Reproducible: Always
Attached file testcase
DispatchEvent is getting called, but it might be because it's called to early in the process?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Blocks: 278448
Note that moving the message another level up still doesn't show a message, so not sure this is a timing thing.
smaug: "XML Event listeners " are created after document load, just before DOMContentLoaded so that is the problem here - the event is being fired before the xml event has been added. Note that novell doesn't do this as well - rather, it seems to always show a custom message for errors inside model.
Attached patch patchSplinter Review
ModelElement should call HandleBindingException for binding exceptions. This patch moves HandleBindingException to nsXFormsUtils as well.
Assignee: aaronr → doronr
Status: NEW → ASSIGNED
Attachment #201186 - Flags: review?(allan)
Attachment #201186 - Flags: review?(aaronr)
Comment on attachment 201186 [details] [diff] [review] patch patch looks great. r=me
Attachment #201186 - Flags: review?(aaronr) → review+
(In reply to comment #5) > Created an attachment (id=201186) [edit] > patch > > ModelElement should call HandleBindingException for binding exceptions. This > patch moves HandleBindingException to nsXFormsUtils as well. Well, yes, the patch is fine I guess but it does not solve the problem does it?
Attachment #201186 - Flags: review?(allan) → review?(smaug)
Comment on attachment 201186 [details] [diff] [review] patch looks good and works.
Attachment #201186 - Flags: review?(smaug) → review+
(In reply to comment #7) > (In reply to comment #5) > > Created an attachment (id=201186) [edit] > > patch > > > > ModelElement should call HandleBindingException for binding exceptions. This > > patch moves HandleBindingException to nsXFormsUtils as well. > > Well, yes, the patch is fine I guess but it does not solve the problem does it? > I missed this comment. What do you mean by not solving the problem?
(In reply to comment #9) > > Well, yes, the patch is fine I guess but it does not solve the problem does it? > > > > I missed this comment. What do you mean by not solving the problem? The testcase should show a message, right? You patch does not solve that. It shows the "fatal error" dialogue -- that's fine, and it should. But it's not solving the problem that it's not possible to show a message upon xforms-binding-exception for a bind element.
(In reply to comment #10) > (In reply to comment #9) > > > Well, yes, the patch is fine I guess but it does not solve the problem does it? > > > > > > > I missed this comment. What do you mean by not solving the problem? > > The testcase should show a message, right? You patch does not solve that. > > It shows the "fatal error" dialogue -- that's fine, and it should. But it's not > solving the problem that it's not possible to show a message upon > xforms-binding-exception for a bind element. > Note that the Novell Plugin didn't do that as well. So, would a event queue type thing on model be alright?
I checked in the patch into trunk. I'll take a look at some sort of event queue so that we can fire the events later. I assuem that when we hit a fatal error, we should not send events anymore, right?
Whiteboard: xf-to-branch
(In reply to comment #11) > Note that the Novell Plugin didn't do that as well. Well, it's the spec. and not the plugin we should follow :) > So, would a event queue type thing on model be alright? I guess we need that. But I think we should rename this bug to "show fatal error dialog for bind exceptions", and do a new one then... or I personally will forget about it.
Doron, please open a new bug and attach a testcase for what this fix doesn't cover. Otherwise I just know that this will get accidently closed when the branch patch goes in.
(In reply to comment #14) > Doron, please open a new bug and attach a testcase for what this fix doesn't > cover. Otherwise I just know that this will get accidently closed when the > branch patch goes in. > Sorry, I didn't see that bug 315712 was already opened for this
checked into MOZILLA_1_8_BRANCH via bug 323691. Leaving open for now until it gets into 1.8.0
Whiteboard: xf-to-branch
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8.0.2
Resolution: --- → FIXED
verified fixed in MOZILLA_1_8_BRANCH
Keywords: fixed1.8.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: