XForms Bug 303926 - duplicate bound nodesets should show the fatal error dialog r=aaronr/smaug